# prexcore-challenge

./: .gitignore  Cargo.toml  api_test.postman_collection.json  readme.md  test.sh
src/: errors.rs  handlers.rs  main.rs  models.rs  services.rs
