[package]
name = "prexcore-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
rust_decimal = "1.34.3"
tokio = "1.36"
serde_json = "1.0.114"
chrono = { version = "^0", features = ["serde"] }